fix: remove scrollbar from org nr field

--- a/apps/forms/app/[lang]/data-hunter/components/data-hunter-form/data-hunter-form.module.css
+++ b/apps/forms/app/[lang]/data-hunter/components/data-hunter-form/data-hunter-form.module.css
@@ -17,3 +17,20 @@
   margin-top: 3rem;
   align-self: flex-start;
 }
+
+.orgNumberField {
+  composes: textFieldHalfWith;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.orgNumberField input::-webkit-outer-spin-button,
+.orgNumberField input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.orgNumberField * input[type=number] {
+  -moz-appearance: textfield;
+}
+
